<resources>
    <string name="app_name">KogoPay - DEV UI Example</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_conditions"><![CDATA[Terms & conditions]]></string>
    <string name="faq">FAQ</string>
    <string name="about_us">About us</string>
    <string name="setting">Setting</string>
    <string name="other">Other</string>
    <string name="fingerprint_faceid">Fingerprint / FaceID</string>
    <string name="change_pin">Change PIN</string>
    <string name="change_language">Change language</string>
    <string name="verify_account">Verify account</string>
    <string name="_0205572xxxx">0205572XXXX</string>
    <string name="jacob_hawkins">Jacob Hawkins</string>
    <string name="more">More</string>
    <string name="logout">Log out</string>
    <string name="or_skip_tutorial">or skip tutorial</string>
    <string name="tap_anywhere_to_continue">Tap anywhere to continue</string>
    <string name="get_started">Get started</string>
    <string name="before_you_start">Before you start!</string>
    <string name="kogo_coin">KOGO Coin</string>
    <string name="kogo">KOGO</string>
    <string name="_28_727_00">£28,727.00</string>
    <string name="_1_46">1.46%</string>
</resources>