<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TutorialActivity">

    <RelativeLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="match_parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" />

        <ImageView
            android:id="@+id/im_back01"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="210dp"
            android:src="@drawable/ic_arrow_back"
            android:visibility="gone"
            tools:visibility="visible"
            />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:gravity="center"
            android:text="@string/before_you_start"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_title_02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/tap_anywhere_to_continue"
            android:textColor="@color/white"
            tools:visibility="visible"
            />

        <TextView
            android:id="@+id/tv_or_skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tabDots1"
            android:layout_centerVertical="true"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/or_skip_tutorial"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btn_get_start"
            style="@style/ButtonStyle.Blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:layout_marginHorizontal="35dp"
            android:layout_marginVertical="5dp"
            android:gravity="center"
            android:text="@string/get_started"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabDots"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="90dp"
            app:tabBackground="@drawable/tab_selector"
            android:background="@android:color/transparent"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp"
            app:tabMode="fixed"
            />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabDots1"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/tv_title_02"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp"
            app:tabMode="fixed"
            android:visibility="invisible"
            app:tabBackground="@drawable/tab_selector"
            tools:visibility="visible"
            />

        <TextView
            android:id="@+id/tv_below_01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="140dp"
            android:gravity="center"
            android:text="@string/before_you_start"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/im_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="140dp"
            android:src="@drawable/ic_arrow_back"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_below_02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="120dp"
            android:gravity="center"
            android:text="@string/tap_anywhere_to_continue"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_below_03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="60dp"
            android:gravity="center"
            android:text="@string/or_skip_tutorial"
            android:textColor="@color/white"
            android:textStyle="bold" />
        <View
            android:id="@+id/line"
            style="@style/LineColor"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="90dp"
            android:layout_width="90dp"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_height="1dp" />



    </RelativeLayout>



</layout>